fix volume slider vertical alignment

--- a/js/webui/src/style.less
+++ b/js/webui/src/style.less
@@ -648,7 +648,7 @@ body {
 .volume-slider {
     width: 6rem;
     margin-left: 0.25rem;
-    margin-bottom: 0.25rem;
+    height: 1.75rem;
 }
 
 .settings-content-wrapper {
